Fix horizontal scrollbar

--- a/app/components/HomePage/HomePageHeader/styles.css
+++ b/app/components/HomePage/HomePageHeader/styles.css
@@ -1,6 +1,6 @@
 .header {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-content: center;
